--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build-gh": "tsc && vite build --base https://thefersh.github.io/to-do-react/",
     "preview": "vite preview"
   },
   "dependencies": {
